<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main_Page">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="?attr/colorPrimary"-->
<!--        android:minHeight="?attr/actionBarSize"-->
<!--        android:theme="?attr/actionBarTheme"-->
<!--        app:menu="@menu/menu_swiping" />-->

    <Button
        android:id="@+id/ViewShortlistedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:onClick="toShortlisted"
        android:text="Shortlisted" />

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:onClick="toSettings"
        android:text="@string/action_settings" />

    <LinearLayout
        android:id="@+id/LocationClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ViewShortlistedButton"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:clickable="true"
        android:onClick="toSetLocation"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/LocationPinImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/location_pin" />

        <TextView
            android:id="@+id/LocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/restaurant_address_default"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/RestaurantCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ShortlistButtonRow"
        android:layout_below="@id/LocationClickable"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginLeft="@dimen/big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginRight="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:clickable="true"
        android:onClick="toDetails"
        app:cardBackgroundColor="@color/colorHint">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/medium_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RestaurantName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="@string/restaurant_name_default"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/RestaurantPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/kfc_image" />

            <TextView
                android:id="@+id/RestaurantDistance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="300m away" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ShortlistButtonRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_compass" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

</RelativeLayout>
